feat:add basic user interface from w3schools.in

--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<!-- Calculator Body -->
+		<div class="calc-body">
+			<!-- Calculator Display Screen -->
+			<div class="calc-screen">
+				<div id="calc-operation">0</div>
+				<div id="calc-typed">0</div>
+			</div>
+
+			<!-- Calculator Buttons -->
+			<div class="calc-button-row">
+				<button>7</button>
+				<button>8</button>
+				<button>9</button>
+				<button class="opt">&#215;</button>
+				<button>4</button>
+				<button>5</button>
+				<button>6</button>
+				<button class="opt">&#8722;</button>
+				<button>1</button>
+				<button>2</button>
+				<button>3</button>
+				<button class="opt">&#43;</button>
+				<button>0</button>
+				<button>.</button>
+				<button>&#9003;</button>
+				<button class="opt">&#61;</button>
+			</div>
+		</div>
+
 		<script src="index.js"></script>
 	</body>
 </html>
