--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 		<div class="calc-body">
 			<!-- Calculator Display Screen -->
 			<div class="calc-screen">
-				<div id="calc-operation">0</div>
+				<div id="calc-operation"></div>
 				<div id="calc-typed">0</div>
 			</div>
 
 			<!-- Calculator Buttons -->
 			<div class="calc-button-row">
-				<button>7</button>
-				<button>8</button>
-				<button>9</button>
+				<button class="num">7</button>
+				<button class="num">8</button>
+				<button class="num">9</button>
 				<button class="opt">&#215;</button>
-				<button>4</button>
-				<button>5</button>
-				<button>6</button>
+				<button class="num">4</button>
+				<button class="num">5</button>
+				<button class="num">6</button>
 				<button class="opt">&#8722;</button>
-				<button>1</button>
-				<button>2</button>
-				<button>3</button>
+				<button class="num">1</button>
+				<button class="num">2</button>
+				<button class="num">3</button>
 				<button class="opt">&#43;</button>
-				<button>0</button>
+				<button class="num">0</button>
 				<button>.</button>
 				<button>&#9003;</button>
-				<button class="opt">&#61;</button>
+				<button id="equal">&#61;</button>
 			</div>
 		</div>
 
